--- a/blogr-nextjs-prisma/package.json
+++ b/blogr-nextjs-prisma/package.json
@@ -20,6 +20,7 @@
     "@types/next-auth": "3.1.14",
     "@types/node": "14.14.6",
     "@types/react": "16.9.56",
+    "prisma": "^2.18.0",
     "typescript": "4.0.5"
   }
 }
